--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ai-example
 spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.options.model=mistral
+spring.ai.ollama.chat.options.model=llama3
 spring.ai.ollama.chat.options.temperature=0.7
 
 #testing
